; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/dlm/extr_recover.c_dlm_wait_timer_fn.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/dlm/extr_recover.c_dlm_wait_timer_fn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.dlm_ls = type { i32, i32 }

@jiffies = common dso_local global i64 0, align 8
@dlm_config = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@HZ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @dlm_wait_timer_fn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dlm_wait_timer_fn(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.dlm_ls*, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = inttoptr i64 %4 to %struct.dlm_ls*
  store %struct.dlm_ls* %5, %struct.dlm_ls** %3, align 8
  %6 = load %struct.dlm_ls*, %struct.dlm_ls** %3, align 8
  %7 = getelementptr inbounds %struct.dlm_ls, %struct.dlm_ls* %6, i32 0, i32 1
  %8 = load i64, i64* @jiffies, align 8
  %9 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @dlm_config, i32 0, i32 0), align 4
  %10 = load i32, i32* @HZ, align 4
  %11 = mul nsw i32 %9, %10
  %12 = sext i32 %11 to i64
  %13 = add nsw i64 %8, %12
  %14 = call i32 @mod_timer(i32* %7, i64 %13)
  %15 = load %struct.dlm_ls*, %struct.dlm_ls** %3, align 8
  %16 = getelementptr inbounds %struct.dlm_ls, %struct.dlm_ls* %15, i32 0, i32 0
  %17 = call i32 @wake_up(i32* %16)
  ret void
}

declare dso_local i32 @mod_timer(i32*, i64) #1

declare dso_local i32 @wake_up(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
